--- a/dashboard.html
+++ b/dashboard.html
@@ -204,7 +204,7 @@
 <!-- PROFILE CARD بدل Weather -->
 <div class="card" style="text-align:center">
   <h2>Personal Info</h2>
-  <img src="images/team/abdelraouf m.jpg" alt="Profile Picture" 
+  <img  id="empPic"  src="images/team/abdelraouf m.jpg" alt="Profile Picture" 
        style="width:100px;height:100px;border-radius:50%;object-fit:cover;margin-bottom:10px">
   <div><strong id="empName">Abdelraouf Shenkada</strong></div>
   <div class="muted" id="empJob">Software Engineer</div>
@@ -814,7 +814,8 @@ function setUserData(user){
   document.querySelector("#empName").textContent = u.empName;
   document.querySelector("#empJob").textContent = u.empJob;
   document.querySelector("#empDept").textContent = u.empDept;
-  document.querySelector(".card img").src = u.empPic;
+document.getElementById("empPic").src = u.empPic;
+
 
   // employment
   document.querySelector("#startDate").value = u.startDate;
@@ -823,6 +824,7 @@ function setUserData(user){
 </script>
 </body>
 </html>
+
 
 
 
