--- a/dashboard.html
+++ b/dashboard.html
@@ -176,7 +176,7 @@
     <input id="loginUser" placeholder="Username" style="width:100%;margin-bottom:10px;padding:8px;border-radius:8px;border:none;background:rgba(0,0,0,0.2);color:#fff">
     <input id="loginPass" type="password" placeholder="Password" style="width:100%;margin-bottom:10px;padding:8px;border-radius:8px;border:none;background:rgba(0,0,0,0.2);color:#fff">
     <button id="btnLogin" class="btn" style="width:100%">Login</button>
-    <small class="muted" style="display:block;margin-top:8px">Try: abdo/1037 or ahmed/2121</small>
+    <small class="muted" style="display:block;margin-top:8px">enter the username & the password</small>
   </div>
 </div>
 
@@ -403,24 +403,24 @@
 <script>
   /* USERS DATABASE */
 const USERS = {
-  abdo: {
+  abdelraouf: {
     pw: "1037",
     logo: "AB",
     headerTitle: "Employee Dashboard",
-    headerSub: "Abdo — Personal workspace",
+    headerSub: "Abdelraouf — Personal workspace",
     empPic: "images/team/abdelraouf m.jpg",
     empName: "Abdo",
     empJob: "Software Engineer",
     empDept: "Smart Door System Center",
     startDate: "2025-01-01"
   },
-  ahmed: {
+  abdulali: {
     pw: "2121",
-    logo: "AH",
+    logo: "AI",
     headerTitle: "Employee Dashboard",
-    headerSub: "Ahmed — Personal workspace",
+    headerSub: "Abdulali — Personal workspace",
     empPic: "images/team/Abdulali1.jpg",
-    empName: "Ahmed",
+    empName: "Abdulali",
     empJob: "Technician",
     empDept: "Maintenance Department",
     startDate: "2025-02-15"
@@ -816,6 +816,7 @@ document.getElementById("empPic").src = u.empPic;
 </script>
 </body>
 </html>
+
 
 
 
