--- a/dashboard.html
+++ b/dashboard.html
@@ -182,10 +182,10 @@
 
 <header>
   <div class="brand">
-    <div class="logo">judy</div>
+    <div class="logo">CP</div>
     <div>
       <h1>Employee Dashboard</h1>
-      <div class="subtitle">judy — Personal workspace</div>
+      <div class="subtitle">company — Personal workspace</div>
     </div>
   </div>
   <div class="controls">
@@ -204,11 +204,11 @@
 <!-- PROFILE CARD بدل Weather -->
 <div class="card" style="text-align:center">
   <h2>Personal Info</h2>
-  <img  id="empPic"  src="images/team/abdelraouf m.jpg" alt="Profile Picture" 
+  <img  id="empPic"  src="images/team/oops.jpeg" alt="Profile Picture" 
        style="width:100px;height:100px;border-radius:50%;object-fit:cover;margin-bottom:10px">
-  <div><strong id="empName">Abdelraouf Shenkada</strong></div>
-  <div class="muted" id="empJob">Software Engineer</div>
-  <div class="muted" id="empDept">Smart Door System Center</div>
+  <div><strong id="empName">NAME</strong></div>
+  <div class="muted" id="empJob">JOB</div>
+  <div class="muted" id="empDept">COMPANY DEP</div>
 </div>
 
 
@@ -816,6 +816,7 @@ document.getElementById("empPic").src = u.empPic;
 </script>
 </body>
 </html>
+
 
 
 
