--- a/College.of.Electronic.Technology-Tripoli-control.html
+++ b/College.of.Electronic.Technology-Tripoli-control.html
@@ -290,9 +290,10 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 <!-- Firebase + Commands -->
+<!-- Firebase + Commands -->
 <script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
-  import { getDatabase, ref, set, push, onChildAdded } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js";
+  import { getDatabase, ref, set } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js";
 
   const firebaseConfig = {
     apiKey: "AIzaSyACQ7ot2G6wvmNRM_hmmTDK8p7zMBQ1w2c",
@@ -318,80 +319,57 @@
     setTimeout(()=>toastEl.remove(), 3000);
   }
 
-  // existing command sender
   function sendCommand(command) {
     set(ref(db, "commands/last"), { action: command, timestamp: Date.now() });
     showToast("✅ Sent: " + command);
   }
   window.sendCommand = sendCommand;
 
-  // ---- MESSAGING for manager (id = 'cet') ----
-  const managerId = 'cet'; // login username in this page is 'cet' (see checkLogin)
-  const messagesListEl = document.getElementById('managerMessagesList');
-  const recipientSelect = document.getElementById('msgRecipientSelect');
-  const managerMsgInput = document.getElementById('managerMsgInput');
-  const managerSendBtn = document.getElementById('managerSendBtn');
+// Livestream controls
+window.startStream = function() {
+  sendCommand("start_stream");
+  document.getElementById("twitchBox").style.display = "block";
+}
+window.stopStream = function() {
+  sendCommand("stop_stream");
+  document.getElementById("twitchBox").style.display = "none";
+}
 
-  function appendManagerMessage(m, self){
-    const el = document.createElement('div');
-    el.style.margin = '6px 0';
-    el.style.padding = '8px';
-    el.style.borderRadius = '8px';
-    el.style.background = self ? 'linear-gradient(90deg,#ffd86b,#ff6b6b)' : 'rgba(255,255,255,0.03)';
-    el.innerHTML = `<div style="font-weight:700">${self ? 'You' : (m.from||'')}</div>
-                    <div style="margin-top:4px">${m.text}</div>
-                    <div style="font-size:11px;color:var(--muted);margin-top:6px">${new Date(m.ts).toLocaleString()}</div>`;
-    messagesListEl.appendChild(el);
-    messagesListEl.scrollTop = messagesListEl.scrollHeight;
-  }
+</script>
 
-  // listen for messages sent TO manager (messages/cet)
-  onChildAdded(ref(db, 'messages/' + managerId), snap => {
-    const m = snap.val();
-    // append only if not from self (manager)
-    const self = (m.from === managerId);
-    if(!self) appendManagerMessage(m, false);
+<script>
+
+  
+ const _0x41b11f=_0xc0b2;function _0x149b(){const _0x5444df=['8772894BxLyVS','4161416YGDLjl','6cExCvn','1179728zuAcCq','1fkrCyc','loginOverlay','loginError','56OceIkG','getElementById','block','3314565mlcHCP','username','value','230SJoOdD','password','1037','cet','style','display','4121421KzLVIG','2584768zaNGEO','1080736eCCENx'];_0x149b=function(){return _0x5444df;};return _0x149b();}(function(_0x1d284e,_0x1e20f8){const _0x3db84f=_0xc0b2,_0x15f8e8=_0x1d284e();while(!![]){try{const _0x32a126=-parseInt(_0x3db84f(0x1f9))/0x1*(parseInt(_0x3db84f(0x1f3))/0x2)+parseInt(_0x3db84f(0x1f2))/0x3+-parseInt(_0x3db84f(0x1f6))/0x4+-parseInt(_0x3db84f(0x1e9))/0x5*(parseInt(_0x3db84f(0x1f7))/0x6)+parseInt(_0x3db84f(0x1fc))/0x7*(-parseInt(_0x3db84f(0x1f4))/0x8)+parseInt(_0x3db84f(0x1f5))/0x9+parseInt(_0x3db84f(0x1ec))/0xa*(parseInt(_0x3db84f(0x1f8))/0xb);if(_0x32a126===_0x1e20f8)break;else _0x15f8e8['push'](_0x15f8e8['shift']());}catch(_0x12a1f){_0x15f8e8['push'](_0x15f8e8['shift']());}}}(_0x149b,0xb464a));function _0xc0b2(_0x19246f,_0x441795){const _0x149b4e=_0x149b();return _0xc0b2=function(_0xc0b29c,_0x13c82f){_0xc0b29c=_0xc0b29c-0x1e9;let _0x3d4117=_0x149b4e[_0xc0b29c];return _0x3d4117;},_0xc0b2(_0x19246f,_0x441795);}const _user=_0x41b11f(0x1ef),_pass=_0x41b11f(0x1ee);function checkLogin(){const _0x389ec6=_0x41b11f;let _0x3d44e0=document[_0x389ec6(0x1fd)](_0x389ec6(0x1ea))[_0x389ec6(0x1eb)],_0x2df8e2=document[_0x389ec6(0x1fd)](_0x389ec6(0x1ed))[_0x389ec6(0x1eb)];_0x3d44e0===_user&&_0x2df8e2===_pass?document['getElementById'](_0x389ec6(0x1fa))[_0x389ec6(0x1f0)]['display']='none':document['getElementById'](_0x389ec6(0x1fb))[_0x389ec6(0x1f0)][_0x389ec6(0x1f1)]=_0x389ec6(0x1fe);}
+
+</script>
+
+  
+<script>
+  // Theme toggle
+  const themeBtn = document.getElementById('themeToggle');
+  themeBtn.addEventListener('click', ()=>{
+    document.body.classList.toggle('dark-mode');
+    let icon = themeBtn.querySelector('i');
+    if(document.body.classList.contains('dark-mode')){
+      icon.classList.remove('bi-sun-fill');
+      icon.classList.add('bi-moon-fill');
+    } else {
+      icon.classList.remove('bi-moon-fill');
+      icon.classList.add('bi-sun-fill');
+    }
   });
 
-  // send message to selected recipient
-  function sendManagerMessage(){
-    const to = recipientSelect.value;
-    const text = managerMsgInput.value.trim();
-    if(!text) return;
-    const payload = { from: managerId, text, ts: Date.now() };
-    push(ref(db, 'messages/' + to), payload)
-      .then(()=> { appendManagerMessage(payload, true); managerMsgInput.value = ''; showToast('Message sent to '+to); })
-      .catch(err => { alert('Send failed: '+err.message); });
-  }
-
-  managerSendBtn.addEventListener('click', sendManagerMessage);
-  managerMsgInput.addEventListener('keydown', (e)=>{ if(e.key==='Enter') sendManagerMessage(); });
-
-  // (optional) expose for debugging
-  window.__db = db;
-  <script>
-function checkLogin() {
-  const username = document.getElementById("username").value.trim();
-  const password = document.getElementById("password").value.trim();
-
-  // الحساب الوحيد للمدير
-  if (username === "cet" && password === "1037") {
-    // إخفاء overlay
-    document.getElementById("loginOverlay").style.display = "none";
-  } else {
-    // إظهار رسالة خطأ
-    document.getElementById("loginError").style.display = "block";
-  }
-}
-</script>
+  // Chevron animation
+  document.querySelectorAll('.btn-toggle[data-bs-toggle="collapse"]').forEach(btn=>{
+    btn.addEventListener('click', ()=>{
+      const chev = btn.querySelector('.chev');
+      const target = document.querySelector(btn.dataset.bsTarget);
+      target.addEventListener('shown.bs.collapse', ()=> chev.classList.add('open'));
+      target.addEventListener('hidden.bs.collapse', ()=> chev.classList.remove('open'));
+    });
+  });
 </script>
 </body>
 </html>
-
-
-
-
-
-
-
 
