--- a/dashboard.html
+++ b/dashboard.html
@@ -828,6 +828,7 @@ function setUserData(user){
   window.currentUserId = user;
   startMessageListener(user);
 }
+  </script>
   <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
 import { getDatabase, ref, push, onChildAdded } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js";
@@ -889,6 +890,7 @@ function startMessageListener(userId){
 </script>
 </body>
 </html>
+
 
 
 
