--- a/dashboard.html
+++ b/dashboard.html
@@ -848,51 +848,63 @@ const firebaseConfig = {
 const app = initializeApp(firebaseConfig);
 const db = getDatabase(app);
 
-const messagesList = document.getElementById('messagesList');
-const msgInput = document.getElementById('msgInput');
-const sendBtn = document.getElementById('sendMsgBtn');
+// ===== Messaging (Manager side) =====
+const managerId = ['abdelraouf', 'abdulali'];// اسم المدير
+const messagesListEl = document.getElementById('managerMessagesList');
+const recipientSelect = document.getElementById('msgRecipientSelect');
+const managerMsgInput = document.getElementById('managerMsgInput');
+const managerSendBtn = document.getElementById('managerSendBtn');
 
-function appendMessage(m, self){
-  const d = document.createElement('div');
-  d.style.margin = '6px 0';
-  d.style.padding = '8px';
-  d.style.borderRadius = '8px';
-  d.style.background = self ? 'linear-gradient(90deg,#2be7b7,#7b61ff)' : 'rgba(255,255,255,0.03)';
-  d.style.color = self ? '#041018' : '';
-  d.innerHTML = `<div style="font-weight:700">${self ? 'You' : (m.from||'')}</div>
-                 <div style="margin-top:4px">${m.text}</div>
-                 <div style="font-size:11px;color:gray;margin-top:6px">${new Date(m.ts).toLocaleString()}</div>`;
-  messagesList.appendChild(d);
-  messagesList.scrollTop = messagesList.scrollHeight;
-}
+  const otherUsers = 'cet';  // المستخدمين الذين سيرسلون للمدير
 
-function startMessageListener(userId){
-  const messagesRef = ref(db, 'messages/' + userId); // مجلد الموظف نفسه
-  onChildAdded(messagesRef, snap => {
+otherUsers.forEach(user => {
+  onChildAdded(ref(db, 'messages/' + user), snap => {
     const m = snap.val();
-    // عرض أي رسالة جاية من المدير
-    if(m.from === 'cet'){ 
-      appendMessage(m, false);
-    }
+    // فقط عرض الرسائل المرسلة من هؤلاء للمدير
+    if(m.from !== managerId) appendManagerMessage(m, false);
   });
+});
+
+// عرض الرسالة
+function appendManagerMessage(m, self){
+  const el = document.createElement('div');
+  el.style.margin = '6px 0';
+  el.style.padding = '8px';
+  el.style.borderRadius = '8px';
+  el.style.background = self ? 'linear-gradient(90deg,#ffd86b,#ff6b6b)' : 'rgba(255,255,255,0.03)';
+  el.innerHTML = `<div style="font-weight:700">${self ? 'You' : (m.from||'')}</div>
+                  <div style="margin-top:4px">${m.text}</div>
+                  <div style="font-size:11px;color:gray;margin-top:6px">${new Date(m.ts).toLocaleString()}</div>`;
+  messagesListEl.appendChild(el);
+  messagesListEl.scrollTop = messagesListEl.scrollHeight;
 }
 
-
-sendBtn.addEventListener('click', ()=>{
-  const text = msgInput.value.trim();
-  if(!text) return;
-  const payload = { from: window.currentUserId || 'unknown', text, ts: Date.now() };
-  // دايماً نرسل الرسائل للـ "cet" (المدير)
-  push(ref(db, 'messages/cet'), payload)
-    .then(()=>{ appendMessage(payload, true); msgInput.value = ''; })
-    .catch(err => { alert('Send failed: '+err.message); });
+// استلام رسائل للمدير
+onChildAdded(ref(db, 'messages/' + managerId), snap => {
+  const m = snap.val();
+  if(m.from !== managerId) appendManagerMessage(m, false);
 });
+
+// إرسال رسالة
+function sendManagerMessage(){
+  const to = recipientSelect.value;
+  const text = managerMsgInput.value.trim();
+  if(!text) return;
+  const payload = { from: managerId, text, ts: Date.now() };
+  push(ref(db, 'messages/' + to), payload)
+    .then(()=> { appendManagerMessage(payload, true); managerMsgInput.value = ''; if(typeof showToast==='function') showToast('Message sent to '+to); })
+    .catch(err => alert('Send failed: '+err.message));
+}
+
+managerSendBtn.addEventListener('click', sendManagerMessage);
+managerMsgInput.addEventListener('keydown', (e)=>{ if(e.key==='Enter') sendManagerMessage(); });
 
 
 
 </script>
 </body>
 </html>
+
 
 
 
